Remove docs dir &  add vignettes

--- a/vignettes/basecalling.Rmd
+++ b/vignettes/basecalling.Rmd
@@ -1,32 +1,30 @@
-
-# Basecalling
+---
+title: "Basecalling"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Basecalling}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
 
 If the computer has a Nvidia GPU with Cuda support (or a connected [eGPU](https://egpu.io)), then basecalling may be done locally.
 Alternatively, basecalling may be done on a different computer, e.g. a HPC server with a GPU node.
 
-## Model
+# Model
 
 Different [machine learning models](https://software-docs.nanoporetech.com/dorado/latest/models/models) are available
 for the basecalling, offering different trade-offs between speed and accuracy.
 Our experience suggests that the `sup` model gives substantially better results than the `hac` model in terms of Q scores
 and recognized primers/barcodes. Basecalling with `sup` may take from a few hours to a full day for a MinION run, depending on the GPU setup.
 
-## On your computer
+# On your computer
 
 [Dorado](https://software-docs.nanoporetech.com/dorado/latest) is needed for this (`dorado` command should be available in console). It's installation size is quite large (a few Gigabytes).
-
-If not using Dorado for other things, you may also use the `install-dorado.sh` installation script, which automatically downloads the software into the *bin* subfolder (Linux / Mac only).
-Make sure to supply the latest version, which can be [checked on the website](https://software-docs.nanoporetech.com/dorado/latest) (example with `1.3.0`):
-
-```sh
-cd path/to/dada-ont-barcoding
-scripts/install-dorado.sh 1.3.0
-```
 
 The basecalling is done as follows:
 
 ```sh
-cd path/to/dada-ont-barcoding
+cd path/to/DadaNanoBC
 
 # create the input directory (if not present)
 run_name=my_run
@@ -39,17 +37,16 @@ ont_data=/media/user/run/data
 model=sup
 
 # run the base-caller (may take a long time)
-# replace 'dorado' with full path to the 'dorado' binary if necessary; e.g.
-# 'bin/dorado' if Dorado was installed with 'scripts/install-dorado.sh'
+# replace 'dorado' with full path to the 'dorado' binary if necessary
 dorado basecaller $model -r --no-trim --emit-fastq $ont_data | gzip -c > analysis/$run_name/reads.fastq.gz
 ```
 
-An easy way to find out the actual paths of the nanopore data is to drag & drop the folders on the console, then copy the path there.
+An easy way to find out the actual paths of the Nanopore data is to drag & drop the folders on the console, then copy the path there.
 
 
-## On a HPC server
+# On a HPC server
 
-Basecalling on a remote server is slightly more complicated. This script shows how to do this on a SLURM server with a GPU node. The `remote_dir` must contain a job submission script (based on this [template](https://github.com/markschl/dada-ont-barcoding/templates/base_calling/slurm_submit_basecaller.sh)); it can be copied to the remote directory e.g. using an FTP client; adjust the `dorado` path and your email address inside the script.
+Basecalling on a remote server is slightly more complicated. This script shows how to do this on a SLURM server with a GPU node. The `remote_dir` must contain a job submission script (based on this [template](https://github.com/markschl/DadaNanoBC/templates/base_calling/slurm_submit_basecaller.sh)); it can be copied to the remote directory e.g. using an FTP client; adjust the `dorado` path and your email address inside the script.
 
 ```sh
 cd path/to/ont-barcoding
